--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,17 @@ section {
 
 
 
-
+/* start button */
+#top {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 30px;
+    right: 20px;
+    background-color: var(--darker-main-color);
+    cursor: pointer;}
+/* end button */
 
 
 
