--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     /* I added this only for testing something,
         And It will be deleted soon!!!
     */
-    height: 300vh;
+    /* height: 300vh; */
 }
 :root {
     /* Put all the most-common used colors here */
