--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
 
 /* Import font "Baloo-2"  */
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+
+/* import Roboto font */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,100;8..144,400&display=swap');
 /*
     - End of importing the fonts
 */
@@ -124,6 +127,7 @@ body {
     font-size: 2rem;
     /* text-shadow: 1px 1px 1px; */
     text-shadow: 0 1px 2px;
+    user-select: none;
 }
 
 .mobile-nav {
@@ -175,21 +179,36 @@ body {
 .banner {
     width: 100%;
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+    gap: 2rem;
 }
-
-
 .banner h1 {
-    /* font-family: ; */
+    font-family: 'Roboto Serif', serif;
+    font-weight: bolder;
     /* width: 100%; */
     text-align: center;
     color: var(--white-color);
     color: var(--white-color-lighter);
     font-size: 2rem;
 }
-
+.banner p {
+    /* width: 100%; */
+    margin: 0 10%;
+    font-family: 'Roboto Serif', serif;
+    text-align: center;
+    /* font-weight: 100; */
+    font-size: 1.3rem;
+    line-height: 1.6rem;
+    color: var(--white-color-lighter);
+}
 
 /*
     - End styling the header 
@@ -366,6 +385,7 @@ section {
 #company-name span {
     font-family: 'Pacifico', cursive; 
     font-weight: normal;  
+    letter-spacing: 1px;
 }
 
 
@@ -396,8 +416,10 @@ section {
         display: block;
     }
     .banner h1 {
-    font-size: 1.3rem;
-
+        font-size: 1.3rem;
+    }
+    .banner p {
+        font-size: 0.9rem;
     }
 }
 /*
