--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,15 @@ section {
     box-shadow: none;
 }
 
+@media only screen and (max-width: 694px) {
+    .contact-us .container{
+        display: inline;
+    }
+    .contact-us .right, .contact-us .left {
+      height: 22vh;
+    }
+
+  }
 /*
     - End Styles for contact-us section
 */
