--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 50%;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.281);
 }
 .contact-us .left span {
     position: absolute;
@@ -417,6 +418,7 @@ section {
 .contact-us .container .left h1 {
     font-size: 2rem;
     color: white;
+    padding: 20px 0;
 }
 .contact-us .container .left .links {
     display: flex;
@@ -447,8 +449,10 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     padding: 0.5rem;
+    margin: 0 2rem;
+    width: 100%;
 }
 .contact-us input{
     width: 100%;
@@ -471,6 +475,8 @@ section {
     cursor: pointer;
     font-size: 1.1rem;
     transition: 0.3s;
+    width: fit-content;
+    margin: auto;
 }
 .contact-us button:hover {
     background-color: var(--darker-main-color);
@@ -610,6 +616,24 @@ section {
     }
     .banner p {
         font-size: 0.9rem;
+    }
+}
+@media (width < 600px) {
+    .contact-us h1 {
+        font-size: 1rem !important;
+    }
+    .contact-us i {
+        font-size: 0.8rem !important;
+        padding: 5px !important;
+    }
+    .contact-us i:hover {
+        padding: 3px !important;
+    }
+    .contact-us input {
+        font-size: 0.8rem;
+    }
+    .contact-us .container {
+        flex-direction: column !important;
     }
 }
 /*
