--- a/css/style.css
+++ b/css/style.css
@@ -635,7 +635,8 @@ section {
 }
 @media (width < 600px) {
     .contact-us h1 {
-        font-size: 1rem !important;
+        font-size: 1.5rem !important;
+        text-align: center;
     }
     .contact-us i {
         font-size: 0.8rem !important;
