--- a/css/style.css
+++ b/css/style.css
@@ -370,10 +370,13 @@ section {
     align-items: center;
 }
 .contact-us .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     height: 50%;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.281);
+}
+.contact-us .container > div {
+    height: 100%;
+    width: 50%;
 }
 .contact-us .left span {
     position: absolute;
@@ -491,15 +494,6 @@ section {
     box-shadow: none;
 }
 
-@media only screen and (max-width: 694px) {
-    .contact-us .container{
-        display: inline;
-    }
-    .contact-us .right, .contact-us .left {
-      height: 22vh;
-    }
-
-  }
 /*
     - End Styles for contact-us section
 */
@@ -653,6 +647,11 @@ section {
     }
     .contact-us .container {
         flex-direction: column !important;
+        height: 80%;
+    }
+    .contact-us .container > div {
+        width:  100%;
+        height: 50%;
     }
 }
 /*
