--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,26 @@ body {
 
     box-shadow: 0 2px 8px #022;
 }
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* opacity: 0.65; */
+    opacity: 0.45;
+    filter:           grayscale(50%) blur(2px) brightness(50%) contrast(120%);
+    -webkit-filter:   grayscale(50%) blur(2px) brightness(50%) contrast(120%);
+    -moz-filter:      grayscale(50%) blur(2px) brightness(50%) contrast(120%);
+    -ms-filter:       grayscale(50%) blur(2px) brightness(50%) contrast(120%);
+    -o-filter:        grayscale(50%) blur(2px) brightness(50%) contrast(120%);
+
+    /* z-index: -1000; */
+
+    animation:                  scale 15s infinite forwards linear alternate;
+    -webkit-animation:          scale 15s infinite forwards linear alternate;
+    -moz-animation:             scale 15s infinite forwards linear alternate;
+    -o-animation:               scale 15s infinite forwards linear alternate;
+    -ms-animation:              scale 15s infinite forwards linear alternate;
+}
 .mobile-menu {
     position: fixed;
     top: 0;
@@ -246,20 +266,6 @@ body {
 }
 .mobile-menu li {
     text-transform: capitalize;
-}
-.img-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* opacity: 0.65; */
-    opacity: 0.45;
-    filter: grayscale(50%);
-
-    animation:                  scale 15s infinite forwards linear alternate;
-    -webkit-animation:          scale 15s infinite forwards linear alternate;
-    -moz-animation:             scale 15s infinite forwards linear alternate;
-    -o-animation:               scale 15s infinite forwards linear alternate;
-    -ms-animation:              scale 15s infinite forwards linear alternate;
 }
 @keyframes scale {
     0% {
