--- a/css/style.css
+++ b/css/style.css
@@ -287,23 +287,32 @@ body {
     align-items: center;
     flex-direction: column;
     /* flex-wrap: wrap; */
-    gap: 2rem;
+    gap: 2rem 0;
 }
 .banner h1 {
-    font-family: 'Roboto Serif', serif;
-    font-weight: bolder;
-    /* width: 100%; */
+    /* font-family: 'Roboto Serif', serif; */
+    font-family: 'Poppins', sans-serif;
+
+    /* Making the header with gradiant: */
+    background: -webkit-linear-gradient(120deg, #ffffe1, var(--main-color)) ;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* End making the header with gradiant: */
+
+    word-spacing: 1px;
     text-align: center;
-    color: var(--white-color);
-    color: var(--white-color-lighter);
-    font-size: 2rem;
+    font-size: 3.3rem;
+    font-weight: 600;
+    padding: auto;
 }
 .banner p {
-    /* width: 100%; */
-    margin: 0 10%;
-    font-family: 'Roboto Serif', serif;
+    width: 60%;
+    padding:  auto;
+    /* font-family: 'Roboto Serif', serif; */
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
     text-align: center;
-    /* font-weight: 100; */
+    /* word-spacing: 1px; */
     font-size: 1.3rem;
     line-height: 1.6rem;
     color: var(--white-color-lighter);
@@ -725,7 +734,9 @@ section {
         display: block;
     }
     .banner h1 {
-        font-size: 1.3rem;
+        /* font-size: 1.2rem; */
+        font-size: 18pt;
+        width: 70%;
     }
     .banner p {
         font-size: 0.9rem;
