--- a/css/style.css
+++ b/css/style.css
@@ -412,11 +412,11 @@ section {
     gap: 20px;
     margin-top: 20px;
     text-align: center;
-    color: var(--darker-main-color);
+    color: var(--white-color-lighter);
 }
 .services .container .serv .box {
     box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
-    border-radius: 15px;
+    border-radius: 13px;
     position: relative;
 }
 .services .container .serv .box:hover {
@@ -433,15 +433,33 @@ section {
     height: 4px;
     width: 0;
     background-color: var(--light-mode-background);
-    top: 0;
+    top: 0.5px;
     transition: 0.5s;
 }
 .services .container .serv .box:hover::after {
-    width: 100%;
+    width: 95.5%;
 }
 .services .container .serv .box i {
     font-size: 3.5rem;
     padding: 15px;
+}
+.services .container .serv .box .i-1 {
+    color: #EF652A;
+}
+.services .container .serv .box .i-2 {
+    color: #254BDD;
+}
+.services .container .serv .box .i-3 {
+    color: #E9CA32;
+}
+.services .container .serv .box .i-4 {
+    color: #60DAFB;
+}
+.services .container .serv .box .i-5 {
+    color: #539F43;
+}
+.services .container .serv .box .i-6 {
+    color: #740FEB;
 }
 .services .container .serv .box h3 {
     padding: 10px;
