Adding gap to footer.

--- a/css/style.css
+++ b/css/style.css
@@ -712,6 +712,7 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 1rem 0;
 
 }
 .footer-new p {
@@ -815,5 +816,3 @@ section {
 /*
     - End of styling
 */
-
-/* test */
