--- a/css/style.css
+++ b/css/style.css
@@ -419,6 +419,9 @@ section {
     border-radius: 13px;
     position: relative;
 }
+.services .container .serv .box p {
+    user-select: none;
+}
 .services .container .serv .box:hover {
     color: var(--white-color-lighter);
     background-color: var(--darker-main-color);
@@ -713,7 +716,6 @@ section {
     align-items: center;
     flex-direction: column;
     gap: 1rem 0;
-
 }
 .footer-new p {
     font-size: 0.88rem;
