--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,17 @@ section {
     margin: 8rem 0;
     overflow: hidden;
 }
+
+section h1 {
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    font-size: 3rem;
+    font-weight: bolder;
+    color: white;
+    background-color: var(--darker-main-color);
+    border-radius: 15px;
+}
 /*
     - Styles for about-us section
 */
@@ -368,16 +379,6 @@ section {
     border-radius: 50%;
     background-color: var(--darker-main-color);
 }
-.about .container .head h1 {
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    font-size: 3rem;
-    font-weight: bolder;
-    color: white;
-    background-color: var(--darker-main-color);
-    border-radius: 15px;
-}
 .about .content > div {
     display: flex;
     flex-direction: column;
@@ -405,16 +406,6 @@ section {
 */
 
 /* Start Service */
-.skills .container .head h1 {
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    font-size: 3rem;
-    font-weight: bolder;
-    color: white;
-    background-color: var(--darker-main-color);
-    border-radius: 15px;
-}
 .skills .container .serv {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
@@ -615,6 +606,81 @@ section {
 
 /*
     - End Styles for contact-us section
+*/
+/*
+    - Start Styles for services section
+*/
+.services .content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    gap: 20px;
+    margin-top: 20px;
+    text-align: center;
+    color: var(--white-color-lighter);
+}
+.services .content .item {
+    box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
+    border-radius: 13px;
+    position: relative;
+    color: var(--lighter-main-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    transition: 0.5s;
+}
+.services .content .item:hover {
+    background-color: var(--main-color);
+}
+
+.services .content .item .icon {
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    margin: 2rem 0;
+}
+.services .content .item .icon i {
+    font-size: 3rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    color: var(--darker-main-color);
+    background-color: var(--lighter-main-color);
+    padding: 10px;
+    border-radius: 50%;
+}
+.services .content .item .icon::before {
+    content: "";
+    width: 5rem;
+    height: 30px;
+    position: absolute;
+    background-color: var(--lighter-main-color);
+    top: calc(50% - 15px);
+    right: calc(100% - 5px);
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+}
+.services .content .item .icon::after {
+    content: "";
+    width: 5rem;
+    height: 30px;
+    position: absolute;
+    background-color: var(--lighter-main-color);
+    top: calc(50% - 15px);
+    left: calc(100% - 5px);
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.services .content .item .head {
+    padding: 1rem 0;
+    background-color: var(--main-color);
+    width: 100%;
+    border-radius: 10px;
+    margin: 1rem 0;
+}
+
+/*
+    - End Styles for services section
 */
 
 /*
