--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,8 @@ body {
     top: 0;
     right: 0;
     background-color: var(--darker-main-color);
-    width: 80%;
+    /* width: 80%; */
+    width: 65%;
     height: 100vh;
     border-left: 2px solid var(--white-border) ;
     box-shadow: 0 0 0 1000vmax rgba(0, 0, 0, .65);
@@ -217,9 +218,10 @@ body {
 }
 #close-btn {
     position: fixed;
-    top: 9%;
-    left: 35%;
-    background-color: var(--main-color);
+    /* top: 9%; */
+    /* left: 35%; */
+    bottom: 15%;
+    right: 9%;
     box-shadow: 0 0 0.18rem rgba(0, 0, 0, .65);
     width: 2rem;
     height: 2rem;
@@ -240,11 +242,13 @@ body {
 }
 @keyframes appear-btn {
     from {
-        top: 0;
+        /* top: 0; */
+        bottom: 0;
         opacity: 0;
     }
     to {
-        top: 9%;
+        /* top: 9%; */
+        bottom: 15%;
         opacity: 1;
     }
 }
@@ -252,6 +256,14 @@ body {
     font-size: 1.35rem;
     padding: 0.3rem;
     text-shadow: 0 0 2px;
+
+    opacity: 0.3;
+    animation: attention-close 0.7s 0.2s alternate infinite;
+}
+@keyframes attention-close {
+    to {
+        opacity: 1;
+    }
 }
 .mobile-menu ul {
     list-style: none;
@@ -261,7 +273,8 @@ body {
     align-items: center;
     flex-direction: column;
     gap: 2rem;
-    margin: 7rem 0;
+    /* margin: 7rem 0; */
+    margin: 9rem 0;
     
 }
 .mobile-menu li {
