--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ body {
     - Styles for the sections
 */
 section {
-    height: 100vh;
+    /* height: 100vh; */
     /* margin: 1.5rem 0 100vh; */
     /* margin: 1.5rem 0 20rem; */
     margin: 8rem 0;
@@ -491,6 +491,7 @@ section h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 .contact-us .container {
     display: flex;
@@ -602,7 +603,17 @@ section h1 {
     margin: 0 2rem;
     width: 100%;
 }
-.contact-us input{
+.contact-us .right .form-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.6rem;
+}
+.contact-us .right .form-item i {
+    color: var(--darker-main-color);
+    font-size: 1.3rem;
+}
+.contact-us input {
     width: 100%;
     outline: none;
     border: none;
@@ -610,7 +621,11 @@ section h1 {
     margin: 0.5rem 0;
     resize: none;
     font-size: 1.1rem;
-    border-radius: 3px;
+    border-radius: 10px;
+    caret-color: var(--darker-main-color);
+}
+.contact-us input::placeholder {
+    color: rgb(179, 179, 179);
 }
 .contact-us button {
     background-color: var(--main-color);
@@ -619,7 +634,7 @@ section h1 {
     padding: 5px;
     color: white;
     border-radius: 5px;
-    box-shadow: 0 5px 2px rgba(0, 0, 0, 0.329);
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.329);
     cursor: pointer;
     font-size: 1.1rem;
     transition: 0.3s;
@@ -628,6 +643,7 @@ section h1 {
 }
 .contact-us button:hover {
     background-color: var(--darker-main-color);
+    transition: 0.3s;
 }
 .contact-us button:active {
     box-shadow: none;
