--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ section {
     /* margin: 1.5rem 0 100vh; */
     /* margin: 1.5rem 0 20rem; */
     margin: 8rem 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 section h1 {
