--- a/css/style.css
+++ b/css/style.css
@@ -341,11 +341,11 @@ body {
     - Styles for the sections
 */
 section {
-    /* height: 100vh; */
+    height: 100vh;
     /* margin: 1.5rem 0 100vh; */
     /* margin: 1.5rem 0 20rem; */
     margin: 8rem 0;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 section h1 {
@@ -431,6 +431,7 @@ section h1 {
     box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
     border-radius: 13px;
     position: relative;
+    transition: all 1.8s ease 0s;
 }
 .skills .container .serv .box:hover {
     color: var(--white-color-lighter);
@@ -491,7 +492,6 @@ section h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 .contact-us .container {
     display: flex;
@@ -603,17 +603,7 @@ section h1 {
     margin: 0 2rem;
     width: 100%;
 }
-.contact-us .right .form-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 0.6rem;
-}
-.contact-us .right .form-item i {
-    color: var(--darker-main-color);
-    font-size: 1.3rem;
-}
-.contact-us input {
+.contact-us input{
     width: 100%;
     outline: none;
     border: none;
@@ -621,11 +611,7 @@ section h1 {
     margin: 0.5rem 0;
     resize: none;
     font-size: 1.1rem;
-    border-radius: 10px;
-    caret-color: var(--darker-main-color);
-}
-.contact-us input::placeholder {
-    color: rgb(179, 179, 179);
+    border-radius: 3px;
 }
 .contact-us button {
     background-color: var(--main-color);
@@ -634,7 +620,7 @@ section h1 {
     padding: 5px;
     color: white;
     border-radius: 5px;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.329);
+    box-shadow: 0 5px 2px rgba(0, 0, 0, 0.329);
     cursor: pointer;
     font-size: 1.1rem;
     transition: 0.3s;
@@ -643,7 +629,6 @@ section h1 {
 }
 .contact-us button:hover {
     background-color: var(--darker-main-color);
-    transition: 0.3s;
 }
 .contact-us button:active {
     box-shadow: none;
