--- a/css/style.css
+++ b/css/style.css
@@ -400,11 +400,11 @@ body {
     - Styles for the sections
 */
 section {
-    height: 100vh;
+    /* height: 100vh; */
     /* margin: 1.5rem 0 100vh; */
     /* margin: 1.5rem 0 20rem; */
     margin: 8rem 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 section h1 {
@@ -551,6 +551,7 @@ section h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 .contact-us .container {
     display: flex;
@@ -590,7 +591,7 @@ section h1 {
 .contact-us .container .right {
     border-top-right-radius: inherit;
     border-bottom-right-radius: inherit;
-}
+} 
 /* End Adding border-radius */
 
 .contact-us .left span.s {
@@ -661,7 +662,15 @@ section h1 {
     margin: 0 2rem;
     width: 100%;
 }
-.contact-us input{
+.contact-us .container .right .form-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.6rem;
+    color: var(--darker-main-color);
+    font-size: 1.2rem;
+}
+.contact-us input {
     width: 100%;
     outline: none;
     border: none;
@@ -669,7 +678,11 @@ section h1 {
     margin: 0.5rem 0;
     resize: none;
     font-size: 1.1rem;
-    border-radius: 3px;
+    border-radius: 10px;
+}
+.contact-us input::placeholder {
+    color: #aaaaaa;
+    caret-color: var(--darker-main-color);
 }
 .contact-us button {
     background-color: var(--main-color);
@@ -678,7 +691,7 @@ section h1 {
     padding: 5px;
     color: white;
     border-radius: 5px;
-    box-shadow: 0 5px 2px rgba(0, 0, 0, 0.329);
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.329);
     cursor: pointer;
     font-size: 1.1rem;
     transition: 0.3s;
