--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
         And It will be deleted soon!!!
     */
     /* height: 300vh; */
+    overflow-x: hidden;
 }
 :root {
     /* Put all the most-common used colors here */
@@ -213,7 +214,30 @@ body {
         width: 0;
     }
     to {
-        width: 80%
+        width: 65%
+    }
+}
+.mobile-menu ul {
+    list-style: none;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    /* margin: 7rem 0; */
+    margin: 9rem 0;
+    
+}
+.mobile-menu li {
+    text-transform: capitalize;
+}
+@keyframes scale {
+    0% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
     }
 }
 #close-btn {
@@ -265,29 +289,7 @@ body {
         opacity: 1;
     }
 }
-.mobile-menu ul {
-    list-style: none;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 2rem;
-    /* margin: 7rem 0; */
-    margin: 9rem 0;
-    
-}
-.mobile-menu li {
-    text-transform: capitalize;
-}
-@keyframes scale {
-    0% {
-        transform: scale(1.2);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
 .banner {
     width: 100%;
     position: absolute;
@@ -669,6 +671,10 @@ section h1 {
     gap: 0.6rem;
     color: var(--darker-main-color);
     font-size: 1.2rem;
+}
+.contact-us .container .right .form-item i {
+    width: 0.4rem;
+    margin: 0 0.5rem 0 0;
 }
 .contact-us input {
     width: 100%;
