--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
         And It will be deleted soon!!!
     */
     /* height: 300vh; */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 :root {
     /* Put all the most-common used colors here */
@@ -406,7 +406,7 @@ section {
     /* margin: 1.5rem 0 100vh; */
     /* margin: 1.5rem 0 20rem; */
     margin: 8rem 0;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 section h1 {
