--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,7 @@ section {
     /* margin: 1.5rem 0 20rem; */
     margin: 8rem 0;
     overflow: hidden;
+    min-height: 100vh;
 }
 
 section h1 {
