--- a/css/style.css
+++ b/css/style.css
@@ -339,54 +339,100 @@ body {
 
 
 
+
+
+
+
 /* start section-Projects */
-.project {
-    display: grid;
-    grid-template-columns: 1fr 1.5fr;
-}
-.project-img {
-    background-color: var(--dark-mode-background);
-    margin: 20px;
-    border-radius: 10px;
-}
-.project-code {
+
+.projects{width: 80%;
+    margin: auto;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    margin: 20px;}
-.information {
+    grid-gap: 15vh;} 
+
+
+
+svg {    width: 20px;
+    height: 20px;
+    font-size: 18px;
+    color: var(--darker-main-color);}
+
+    ul {list-style: none;}
+#projects .main-projects  .project article p,a{color:white; font-weight: 600; text-decoration: none;}
+
+#projects .main-projects  .project article p{margin: 15px 0px 15px 0px; font-size: 1.8rem;}
+
+
+.projects .main-projects .project .description {
+    padding: 20px;
     background-color: var(--darker-main-color);
-    margin: 10px;
-    width: 130%;
+    border-radius: 5px;
+    font-size: 15px;
+    color: white;
+    text-align: center;
+    width: 100%;
+    height: 8vh;} 
+
+
+.projects .main-projects .project .tags, .projects .additional-projects .tags {
+    display: flex;
+    justify-content: flex-end;
+    color: var(--darker-main-color);
+    font-size: 14px;
+    gap: 10px 20px;
+    margin: 20px 0;}
+
+
+.projects .main-projects .project .links {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;}
+
+.projects .main-projects .image {
     position: relative;
-    border-radius: 10px;
-} 
-.project .project-code .Primitive-information p {
-    margin: 20px;
-    color: white;
-}
-.project .project-code .Primitive-information  h3 {
-    margin: 20px; color: var(--dark-mode-background);
-    font-weight: 700;
-    font-size: 2rem;
-}
-.project .project-code .information  p {
-    margin: 20px;
-    color:var(--dark-mode-background);
+    border-radius: 4px;
+    overflow: hidden;
+    height: min(30vw, 362px);}
+
+
+.projects .main-projects .image::before {
+    content: '';
     position: absolute;
-}
-.project .project-code .information  a {
-    text-decoration: none;
-    color: white;
-}
-.project .project-code .Languages-Spoken h4 {
-    color: white;
-    display: inline-block;
-    margin: 20px;
-    font-size: larger; 
-    font-weight: 400;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-image: url(https://cdn.dribbble.com/users/114896/screenshots/4965972/patterns_1x.jpg);
+    background-color: var(--dark-mode-background);}
+
+
+
+
+@media (max-width: 767px) {
+    .projects .container {
+        max-width: 660px;}
+
+    .projects{width: 90%;
+        margin: auto;
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-gap: 0vh;} 
+     .main-projects{ height: 15vh;}
+
+        .projects .main-projects .project article {
+        padding: 0 clamp(20px, 5vw, 40px);
+        transform: translateY(-80%);}
+
+    .projects .main-projects .project .description {
+    margin: 10px;
+    padding: 10px;}
+    #projects .main-projects  .project article p{margin: 0px;}
 }
 
 /* end section-Projects */
+
+
 
 
 
